:bug: Fix context menu z-index

--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -183,7 +183,7 @@
     top: 50px;
     width: 256px;
     height: calc(100vh - 48px);
-    z-index: 10;
+    z-index: 9;
   }
 
   .empty-state {
